--- a/app/src/main/res/layout/custom_calendarview.xml
+++ b/app/src/main/res/layout/custom_calendarview.xml
@@ -35,6 +35,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/item_color"
+        android:padding="7dp"
         android:orientation="horizontal">
         <TextView
             android:text="日"
@@ -42,6 +44,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:textSize="22sp"
+            android:textColor="#ffffff"
             android:layout_height="wrap_content" />
         <TextView
             android:text="一"
@@ -49,6 +52,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:textSize="22sp"
+            android:textColor="#ffffff"
             android:layout_height="wrap_content" />
         <TextView
             android:text="二"
@@ -56,6 +60,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:textSize="22sp"
+            android:textColor="#ffffff"
             android:layout_height="wrap_content" />
         <TextView
             android:text="三"
@@ -63,6 +68,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:textSize="22sp"
+            android:textColor="#ffffff"
             android:layout_height="wrap_content" />
         <TextView
             android:text="四"
@@ -70,6 +76,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:textSize="22sp"
+            android:textColor="#ffffff"
             android:layout_height="wrap_content" />
         <TextView
             android:text="五"
@@ -77,6 +84,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:textSize="22sp"
+            android:textColor="#ffffff"
             android:layout_height="wrap_content" />
         <TextView
             android:text="六"
@@ -84,6 +92,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:textSize="22sp"
+            android:textColor="#ffffff"
             android:layout_height="wrap_content" />
 
     </LinearLayout>
